UtahLiveDataTest/src/objects/FEDBudgetStage__c.object
<CustomObject>
    <fields>
        <fullName>Account_FedBudget__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account_FedBudget</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>FEDBudgetStages</relationshipLabel>
        <relationshipName>FEDBudgetStages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BudgetAmountFormula__c</fullName>
        <formula>Value(BudgetAmount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget Amount Formula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BudgetAmount__c</fullName>
        <label>Budget Amount</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget_Amount__c</fullName>
        <label>Budget Amount</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DisplayOrder__c</fullName>
        <label>Display Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ErrorMessage__c</fullName>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FED_Budget_Batch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FED Budget Batch</label>
        <referenceTo>FEDBudgetBatch__c</referenceTo>
        <relationshipLabel>FEDBudgetStages</relationshipLabel>
        <relationshipName>FEDBudgetStages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FileBatch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>File Batch</label>
        <referenceTo>FileBatch__c</referenceTo>
        <relationshipLabel>FEDBudgetStages</relationshipLabel>
        <relationshipName>FEDBudgetStages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KeyContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FEDBudgetStages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LEAComment__c</fullName>
        <label>LEA Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ObjectCode__c</fullName>
        <label>Object Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgramBudget__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProgramBudget</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>FEDBudgetStages</relationshipLabel>
        <relationshipName>FEDBudgetStages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProgramCode__c</fullName>
        <label>Program Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgramComment__c</fullName>
        <label>ProgramComment</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>FEDBudgetStages</relationshipLabel>
        <relationshipName>FEDBudgetStages1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SubRecipient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SubRecipient</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>FEDBudgetStages</relationshipLabel>
        <relationshipName>FEDBudgetStages2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UniqueKeyFormula__c</fullName>
        <formula>Program__c + SubRecipient__c + ProgramCode__c + ObjectCode__c + TEXT(FileBatch__r.FiscalYear__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UniqueKeyFormula</label>
        <type>Text</type>
    </fields>
    <label>FEDBudgetStage</label>
    <nameField>
        <label>FEDBudgetStage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FEDBudgetStages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>